--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@vitejs/plugin-react": "^4.4.1",
+    "bootstrap": "^5.3.5",
     "react": "^17.0.1",
     "react-app-rewired": "^2.2.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^17.0.1",
     "socket.io-client": "^3.1.2",
     "vite": "^6.3.2",
